--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <title>Scrimba BoredBot Project</title>
 </head>
 <body>
-  
-  
+  <h1>BoredBot</h1>
+  <p id="activity"></p>
+  <button>I'm Bored</button>
 </body>
 </html>
