--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <script src="script.js" defer></script>
   <title>Scrimba BoredBot Project</title>
 </head>
 <body>
   <div class="container">
     <h1>🤖 BoredBot 🤖</h1>
-    <h4>Find something to do...</h4>
-    <p id="activity"></p>
-    <button>I'm Bored</button>
+    <h4 id="activity">Find something to do...</h4>
+    <button id="bored-btn">I'm Bored</button>
   </div>
 </body>
 </html>
